Using a custom matching function instead of sqlite's glob.

We want to support only the asterisk (*) as the universal matcher.
We do not want brackets, question marks nor anything else.

BUG:352574